Add support for python and fzf

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,8 @@
 {
   "suggest.enablePreselect": false,
   "suggest.noselect": true,
+  "semanticTokens.filetypes": ["*"],
+  "diagnostic.showUnused": false,
   "languageserver": {
     "ccls": {
       "command": "ccls",
